<resources>
    <string name="app_name">TestAndroidDemo</string>
    <string name="baseservice_test">BaseService方法test测试</string>
    <string name="baseservice_testperson">BaseService方法testPerson测试</string>
    <string name="baseservice_downloadimage">BaseService方法downloadImage测试</string>
    <string name="baseservice_getperson">BaseService方法getPersonTest测试</string>
    <string name="baseservice_testin">BaseService方法getPersonIn测试</string>
    <string name="baseservice_testout">BaseService方法getPersonOut测试</string>
    <string name="baseservice_testinout">BaseService方法getPersonInOut测试</string>
    <string name="view_demo_show">各种自定义控件以及开源框架demo演示界面</string>
    <string name="list_refresh_show">自定义list实现上拉加载下拉刷新</string>
    <string name="volley_interface_show">volley框架演示</string>
    <string name="volley_imageview_update">volley框架演示图片下载完刷新</string>
    <string name="volley_json_request">volley框架演示json请求数据</string>
    <string name="volley_xml_request">volley框架演示xml请求数据</string>

    <string name="show_demo_activity">ShowDemoActivity</string>


    <string name="map_gaode">高德地图框架演示</string>
    <string name="fail_dingwei">定位失败</string>
    <string name="normal_type">正常模式</string>
    <string name="satellite_type">跟随模式</string>
    <string name="rotate_type">旋转模式</string>
    <string name="model_shiliang">矢量模式</string>
    <string name="model_weixing">卫星模式</string>
    <string name="model_night">夜景模式</string>
    <string name="sign_show">poi关键字演示</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="city">城市</string>
    <string name="search">搜索</string>
    <string name="nextPage">下一页</string>
    <string name="loading">正在加载中...</string>
    <string name="edit_null">编辑框无内容</string>
    <string name="network_error">搜索失败,请检查网络连接</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="jump_to_gaode">跳转到高德地图</string>
    <string name="jump_to_baidu">跳转到百度地图</string>
    <string name="uninstall_gaode">没有安装高德地图</string>
    <string name="market">商场</string>
    <string name="shanghai">上海</string>

    <string name="event_bus_demo">EventBus演示框架demo</string>
    <string name="jump_to_otheractivity">跳转到其他activity</string>
    <string name="use_eventbus_post">使用EventBus发送消息进行演示</string>

    <string name="sliding_pane_layout_demo">SlidingPaneLayout(抽屉)demo</string>
    <string name="wangyi">网易</string>
    <string name="xinlang">新浪</string>
    <string name="tengxun">腾讯</string>
    <string name="souhu">搜狐</string>
    <string name="sliding_pane_animation">滑动动画</string>

    <string name="update_apk_demo">后台下载apk，并提示安装demo！</string>
    <string name="use_downloadmanager_update_apk">使用android自带的DownloadManager下载apk</string>
    <string name="download">下载</string>
    <string name="pause">暂停</string>
    <string name="deleteTask">删除下载</string>

    <string name="gridview_test">Gridview Demo演示</string>
    <string name="percent_layout">android-percent-support百分比布局演示</string>
    <string name="percent_relative">percent_relative演示</string>
    <string name="percent_linear">percent_linear演示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="tip">提示</string>

    <string name="actionbar_custom_test">actionbar 自定义演示(详情:CustomActionbar)</string>
    <string name="date_picker">自定义日历演示</string>
    <string name="sort_list_view">SortListView演示</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
