<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/list_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_refresh_show"/>
        <Button
            android:id="@+id/volley_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volley_interface_show"
            android:layout_below="@+id/list_show"/>
        <Button
            android:id="@+id/gaoDeDitu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_gaode"
            android:layout_below="@+id/volley_show"/>
        <Button
            android:id="@+id/eventBusBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_bus_demo"
            android:layout_below="@+id/gaoDeDitu"/>
        <Button
            android:id="@+id/slidingPaneLayoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sliding_pane_layout_demo"
            android:layout_below="@+id/eventBusBtn"/>
        <Button
            android:id="@+id/updateApkBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_apk_demo"
            android:layout_below="@+id/slidingPaneLayoutBtn"/>

        <Button
            android:id="@+id/gridviewBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gridview_test"
            android:layout_below="@+id/updateApkBtn"/>

        <Button
            android:id="@+id/percentLayoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent_layout"
            android:layout_below="@+id/gridviewBtn"/>

        <Button
            android:id="@+id/actionbarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actionbar_custom_test"
            android:layout_below="@+id/percentLayoutBtn"/>

        <Button
            android:id="@+id/datepickerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_picker"
            android:layout_below="@+id/actionbarBtn"/>
        <Button
            android:id="@+id/sortListViewBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_list_view"
            android:layout_below="@+id/datepickerBtn"/>

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="next_null"
            android:layout_below="@+id/sortListViewBtn"/>
    </RelativeLayout>
</ScrollView>
</RelativeLayout>
