<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:id="@+id/text" android:text="Hello World!" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/testBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/baseservice_test"
        android:layout_below="@+id/text"/>
    <Button
        android:id="@+id/testPersonBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/baseservice_testperson"
        android:layout_below="@+id/testBtn"/>
    <Button
        android:id="@+id/getPersonBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/baseservice_getperson"
        android:layout_below="@+id/testPersonBtn"/>
    <Button
        android:id="@+id/testDownloadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/baseservice_downloadimage"
        android:layout_below="@+id/getPersonBtn"/>
    <Button
        android:id="@+id/testInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/baseservice_testin"
        android:layout_below="@+id/testDownloadImage"/>
    <Button
        android:id="@+id/testOutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/baseservice_testout"
        android:layout_below="@+id/testInBtn"/>
    <Button
        android:id="@+id/testInOutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/baseservice_testinout"
        android:layout_below="@+id/testOutBtn"/>
    <Button
        android:id="@+id/viewDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/view_demo_show"
        android:layout_below="@+id/testInOutBtn"/>
</RelativeLayout>
