<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <com.amap.api.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.amap.api.maps.MapView>
    <RadioGroup
        android:id="@+id/dingweiType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/normalRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/normal_type"/>
        <RadioButton
            android:id="@+id/satelliteRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satellite_type"/>
        <RadioButton
            android:id="@+id/rotateRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_type"/>
    </RadioGroup>
    <RadioGroup
        android:id="@+id/mapType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dingweiType"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/shilianglRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/model_shiliang"/>
        <RadioButton
            android:id="@+id/weixingRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_weixing"/>
        <RadioButton
            android:id="@+id/nightRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_night"/>
    </RadioGroup>
    <Button
        android:id="@+id/signBtn"
        android:layout_below="@+id/mapType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_show"/>
</RelativeLayout>
