<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/imageViewBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volley_imageview_update"/>
    <Button
        android:id="@+id/xmlBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volley_xml_request"/>
    <Button
        android:id="@+id/jsonBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volley_json_request"/>
    <TextView
        android:id="@+id/responseContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="show_response_content"/>
</LinearLayout>
